objects/Location_Partner_Users__c.object
<CustomObject>
    <description>This object supports the logical assignment of a partner user to one or more Location entries in the Location object.</description>
    <fields>
        <fullName>Contact__c</fullName>
        <description>Reference to a Contact object&apos;s record. This custom objects implements an intersection between Contacts and Location records.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Location Partner Users</relationshipLabel>
        <relationshipName>Partner_User_Location_Mappings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>Reference to a Location object&apos;s record. This custom objects implements an intersection between Contacts and Location records.</description>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Location Partner Users</relationshipLabel>
        <relationshipName>Partner_User_Location_Mappings</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Territory_Partner_Admin_Role__c</fullName>
        <label>Territory Partner Admin Role</label>
        <picklist>
            <picklistValues>
                <fullName>Deal Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leads Administrator</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Userkey__c</fullName>
        <description>Partner User Location Assignment unique key.</description>
        <externalId>true</externalId>
        <label>Userkey</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Location Partner Users</label>
    <nameField>
        <displayFormat>PULA-{0}</displayFormat>
        <label>Location Partner Users</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Location Partner Users</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>